Update to Java 25 (#165)